--- a/views/tables.ejs
+++ b/views/tables.ejs
@@ -148,8 +148,8 @@
         <tbody>
         <tr>
           <td> 1 </td>
-          <td> <a href="/control/1" class="btn btn-success btn-xs">CONTROL</a></td>
-          <td> <a href="/charts/1" class="btn btn-warning btn-xs">LOG</a>  </td>
+          <td> <a href="/control" class="btn btn-success btn-xs">CONTROL</a></td>
+          <td> <a href="/charts" class="btn btn-warning btn-xs">LOG</a>  </td>
           <td> 1 </td>
           <td> 1 </td>
           <td> 1 </td>
