--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -9,12 +9,12 @@
   <meta name="author" content="">
   <title>IoT Waspmote Dashboard</title>
   <!-- Bootstrap Çekirdek CSS-->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Fontlar-->
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <!-- Özel Stil-->
-  <link href="css/sb-admin.css" rel="stylesheet">
-  <script src="/socket.io-client/dist/socket.io.js" ></script>
+  <link href="../css/sb-admin.css" rel="stylesheet">
+  <script src="../socket.io-client/dist/socket.io.js" ></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -27,19 +27,19 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-        <a class="nav-link" href="index">
+        <a class="nav-link" href="/index">
           <i class="fa fa-fw fa-dashboard"></i>
           <span class="nav-link-text">Dashboard</span>
         </a>
       </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-        <a class="nav-link" href="charts">
+        <a class="nav-link" href="/charts">
           <i class="fa fa-fw fa-area-chart"></i>
           <span class="nav-link-text">Charts</span>
         </a>
       </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-        <a class="nav-link" href="tables">
+        <a class="nav-link" href="/tables">
           <i class="fa fa-fw fa-table"></i>
           <span class="nav-link-text">Tables</span>
         </a>
@@ -210,17 +210,18 @@
   </div>
 </div>
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
     <!-- Page level plugin JavaScript-->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="../vendor/chart.js/Chart.min.js"></script>
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin.min.js"></script>
+    <script src="../js/sb-admin.min.js"></script>
       <script src="../utils.js"></script>
     <!-- Custom scripts for this page-->
-    <script src="js/sb-admin-charts.js"></script>
+    <script src="../js/sb-admin-charts.js"></script>
+<script src="../socket.io-client/dist/socket.io.js" ></script>
   </div>
 </body>
 
