--- a/views/tables.ejs
+++ b/views/tables.ejs
@@ -9,12 +9,12 @@
   <meta name="author" content="">
   <title>IoT Waspmote Dashboard</title>
   <!-- Bootstrap Çekirdek CSS-->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Fontlar-->
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <!-- Özel Stil-->
-  <link href="css/sb-admin.css" rel="stylesheet">
-    <script src="/socket.io-client/dist/socket.io.js" ></script>
+  <link href="../css/sb-admin.css" rel="stylesheet">
+    <script src="../socket.io-client/dist/socket.io.js" ></script>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -27,19 +27,19 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-        <a class="nav-link" href="index">
+        <a class="nav-link" href="/index">
           <i class="fa fa-fw fa-dashboard"></i>
           <span class="nav-link-text">Dashboard</span>
         </a>
       </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-        <a class="nav-link" href="charts">
+        <a class="nav-link" href="/charts">
           <i class="fa fa-fw fa-area-chart"></i>
           <span class="nav-link-text">Charts</span>
         </a>
       </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Cihazlar">
-        <a class="nav-link" href="tables">
+        <a class="nav-link" href="/tables">
           <i class="fa fa-fw fa-table"></i>
           <span class="nav-link-text">Cihazlar</span>
         </a>
@@ -130,8 +130,8 @@
           <th>Waspmote ID</th>
           <th>CONTROL</th>
           <th>CHARTS</th>
-          <th>Dummy</th>
-          <th>Dummy</th>
+          <th>Log</th>
+          <th>Statistic</th>
           <th>Online</th>
         </tr>
         </thead>
@@ -140,19 +140,19 @@
           <th>Waspmote ID</th>
           <th>CONTROL</th>
           <th>CHARTS</th>
-          <th>Dummy</th>
-          <th>Dummy</th>
+          <th>Log</th>
+          <th>Statistic</th>
           <th>Online</th>
         </tr>
         </tfoot>
         <tbody>
         <tr>
           <td> 1 </td>
-          <td> <a href="/control" class="btn btn-success btn-xs">CONTROL</a></td>
-          <td> <a href="/charts" class="btn btn-warning btn-xs">LOG</a>  </td>
-          <td> 1 </td>
-          <td> 1 </td>
-          <td> 1 </td>
+          <td> <a href="/control" class="btn btn-success btn-xs">Control</a></td>
+          <td> <a href="/charts/1" class="btn btn-warning btn-xs">Charts</a>  </td>
+          <td> <a href="/logs" class="btn btn-secondary btn-xs">Log</a>  </td>
+          <td> <a href="/statistics" class="btn btn-dark btn-xs">Statistics</a>  </td>
+          <td> <i class="fa fa-plug" style="color: red"></i></i> </td>
 
         </tr>
         <!-- baglantılar buraya -->
@@ -207,13 +207,13 @@
   </div>
 </div>
 <!-- Bootstrap core JavaScript-->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../vendor/jquery/jquery.min.js"></script>
+<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Core plugin JavaScript-->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 <!-- Custom scripts for all pages-->
-<script src="js/sb-admin.min.js"></script>
-<script src="js/sb-admintables.js"></script>
+<script src="../js/sb-admin.min.js"></script>
+<script src="../js/sb-admintables.js"></script>
 </div>
 </body>
 
