Auth And Sessions
Adding Auth And Sessions using passport.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,7 +147,7 @@
             <div class="modal-body">Eger Cikmak istiyorsanız logouta basın</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">İptal Et</button>
-                <a class="btn btn-primary" href="login">Cikis Yap</a>
+                <a class="btn btn-primary" href="/signout">Cikis Yap</a>
             </div>
         </div>
     </div>
